--- a/languages/default.po
+++ b/languages/default.po
@@ -1,14 +1,21 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
-"Project-Id-Version: reverie-translation-default\n"
+"Project-Id-Version: magnificient-translation-default\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-08-04 18:20+0100\n"
-"PO-Revision-Date: 2013-08-04 18:20+0100\n"
-"Last-Translator: Stefan Lorenz <stefan.lorenz@it-consulting-lorenz.de>\n"
+"PO-Revision-Date: 2015-08-01 22:18+0500\n"
+"Last-Translator: Nirmalya Ghosh <nirmalya.email@gmail.com>\n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.4\n"
+"Plural-Forms: \n"
+"X-Generator: Eazy Po 0.9.5.3\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop;_e;__\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-SourceCharset: UTF-8\n"
