--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -1,18 +1,23 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
-"Project-Id-Version: reverie-french-translation\n"
-"PO-Revision-Date: 2013-08-15 00:04+0100\n"
-"Last-Translator: Sebastien Dufourcq <contact@sebastien-dufourcq.fr>\n"
-"Language-Team: Sebastien Dufourcq <contact@sebastien-dufourcq.fr>\n"
+"Project-Id-Version: magnificient-french-translation\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2015-08-01 22:18+0500\n"
+"Last-Translator: Nirmalya Ghosh <nirmalya.email@gmail.com>\n"
+"Language-Team: \n"
 "Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.7\n"
-"X-Poedit-KeywordsList: _;gettext;gettext_noop;_e;__\n"
 "Plural-Forms: nplurals=2; plural=(n>1);\n"
+"X-Generator: Eazy Po 0.9.5.3\n"
+"X-Poedit-KeywordsList: _;gettext;gettext_noop;_e;__\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"POT-Creation-Date: \n"
 
 #: /home/stefan/git/reverie/search.php:6
 msgid "Search Results for"
