--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -1,15 +1,21 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
-"Project-Id-Version: Reverie\n"
+"Project-Id-Version: magnificient-italian-translation\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-12-27 22:31+0100\n"
-"PO-Revision-Date: 2013-12-27 22:32+0100\n"
-"Last-Translator: Francesco Michelini <kekko.rider@libero.it>\n"
+"PO-Revision-Date: 2015-08-01 22:19+0500\n"
+"Last-Translator: Nirmalya Ghosh <nirmalya.email@gmail.com>\n"
 "Language-Team: \n"
 "Language: it_IT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.6.3\n"
+"Plural-Forms: \n"
+"X-Generator: Eazy Po 0.9.5.3\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop;_e;__\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-SearchPath-0: ../.\n"
