--- a/languages/magnificient.pot
+++ b/languages/magnificient.pot
@@ -1,22 +1,22 @@
-# SOME DESCRIPTIVE TITLE.
+# Translation of 
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: reverie-master-libsass-template 5.4.0\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: Magnificient\n"
+"Report-Msgid-Bugs-To: Nirmalya Ghosh <nirmalya.email@gmail.com>\n"
 "POT-Creation-Date: 2014-09-13 17:56+0200\n"
-"PO-Revision-Date: 2015-04-30 09:12+0530\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2015-08-01 22:13+0500\n"
+"Last-Translator: Nirmalya Ghosh <nirmalya.email@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.6.7\n"
-"Language: en\n"
+"Plural-Forms: nplurals=1; plural=0\n"
+"X-Generator: Eazy Po 0.9.5.3\n"
 
 #: 404.php:8
 msgid "File Not Found"
@@ -45,7 +45,7 @@ msgstr ""
 msgid "Click the <a href=\"javascript:history.back()\">Back</a> button"
 msgstr ""
 
-#. /previous pages when applicable
+#.  /previous pages when applicable
 #: archive.php:21 index.php:24 search.php:25
 msgid "&larr; Older posts"
 msgstr ""
@@ -177,11 +177,11 @@ msgid ""
 "searching can help."
 msgstr ""
 
-#. /archive/search.
-#. *
-#. * @subpackage FoundationPress
-#. * @since FoundationPress 1.0
-#.
+#.  /archive/search.
+#.  *
+#.  * @subpackage FoundationPress
+#.  * @since FoundationPress 1.0
+#. 
 #: content.php:16
 msgid "Continue reading..."
 msgstr ""
@@ -256,7 +256,7 @@ msgid_plural "I have %d apples"
 msgstr[0] ""
 msgstr[1] ""
 
-#. / TRANSLATORS: This should be translated as a shorthand for YEAR-MONTH-DAY using 4, 2 and 2 digits.
+#.  / TRANSLATORS: This should be translated as a shorthand for YEAR-MONTH-DAY using 4, 2 and 2 digits.
 #: node_modules/grunt-pot/test/fixtures/some-other-file.php:16
 msgid "yyyy-mm-dd"
 msgstr ""
